Fix spacing between logout icon and text

--- a/services/payload/src/components/global.scss
+++ b/services/payload/src/components/global.scss
@@ -37,6 +37,6 @@
 
   & > p {
       font-size: 18px;
-      margin-left: 10px;
+      margin-left: 3px;
   }
 }
